--- a/client/source/jade/index.jade
+++ b/client/source/jade/index.jade
@@ -1,18 +1,14 @@
-html(ng-app="app" ng-cloak)
+html
     head
         meta(charset="UTF-8")
         title 
         link(rel="shortcut icon", href="images/favicon_256x256.png", type="image/png")
         link(href="main.css", rel="stylesheet")
 
-        //- // CSS    
-        //- link(href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css", rel="stylesheet")
-        //- link(href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css", rel="stylesheet")
-
-    body(ng-controller="MainCtrl")
+    body(ng-controller="MainCtrl" ng-app="app" ng-cloak)
 
         input(ng-model="test")
         span {{test}}
         
-
         script(src="main.js")
+
