--- a/client/source/jade/index.jade
+++ b/client/source/jade/index.jade
@@ -8,7 +8,9 @@ html
 
     body(ng-controller="MainCtrl" ng-app="app" ng-cloak)
 
-        include graph
+        graph
+        buttons-panel
+        //- button-add-persone
         
         script(src="main.js")
 
