--- a/client/source/jade/index.jade
+++ b/client/source/jade/index.jade
@@ -9,8 +9,12 @@ html
     body(ng-controller="MainCtrl" ng-app="app" ng-cloak)
 
         graph
-        buttons-panel
-        //- button-add-persone
-        
+        div.buttons-panel
+            buttons-add-persone.buttons-panel-button
+            br
+            buttons-add-persone.buttons-panel-button
+            br
+            buttons-remove-persone.buttons-panel-button
+
         script(src="main.js")
 
