--- a/client/source/styl/main.styl
+++ b/client/source/styl/main.styl
@@ -1,3 +1,25 @@
-*, body
-	margin 0px
-	padding 0px
+*, body 
+    margin 0px
+    padding 0px    
+
+.buttons-panel 
+    position absolute
+    top 10px
+    left 10px
+
+.buttons-panel-button
+    position relative
+    background-color:transparent;
+    border-radius:6px;
+    text-indent:0;
+    border:1px solid #dcdcdc;
+    display:inline-block;
+    color:#777777;
+    font-family:arial;
+    font-size:25px;
+    font-weight:bold;
+    font-style:normal;
+    height:30px;
+    width:30px;
+    // line-height:30px;
+    text-align:center;
